# assistant-fantasy-coach

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.cursor/: mcp.json
mobile/: app.json  metro.config.js  package.json
mobile/app/: _layout.tsx  auth.tsx  index.tsx
mobile/app/recommendations/: [id].tsx  index.tsx
mobile/app/teams/: [id].tsx  connect.tsx  index.tsx  sleeper-login.tsx
mobile/components/: DebugLogOverlay.tsx  SleeperLoginModal.tsx
mobile/lib/: api.ts  auth.tsx  debugLog.ts  disableFastRefresh.ts  notifications.ts  storage.ts
server/: package.json
server/python/: Dockerfile  pyproject.toml  requirements.txt
server/python/sports_trends/: __init__.py  cron_agent.py  data.py  mcp_server.py  sports.py
server/src/: index.ts
server/src/config/: index.ts
server/src/middleware/: auth.ts
server/src/models/: AgentRun.ts  BacktestRun.ts  NewsItem.ts  SwapRecommendation.ts  Team.ts  User.ts
server/src/routes/: auth.ts  connections.ts  debug.ts  internal.ts  lineup.ts  recommendations.ts  teams.ts
server/src/services/: agentService.ts  backtestService.ts  feedbackService.ts  gamedayService.ts  newsService.ts  pushService.ts  teamSync.ts
server/src/services/backtest/: calendar.ts  replay.ts  sleeperHistory.ts  train.ts
server/src/services/fantasy-platform/: espn.ts  index.ts  sleeper.ts  types.ts  yahoo.ts
server/src/services/llm/: client.ts
server/src/services/roster-optimizer/: agent.ts  candidates.ts  citations.ts  compliance.ts  (+6 more)
server/src/types/: index.ts
server/src/utils/: crypto.ts
